# axum-api

./: .env.example  Cargo.toml
frontend/src/: App.tsx  chat.css
frontend/src/components/: ChatApp.tsx
frontend/src/ws/: protocol.ts  useChatSocket.ts
migrations/: 0001_init.sql
src/: main.rs  realtime.rs  redis_client.rs  state.rs
src/handlers/: mod.rs  user.rs  ws.rs
src/routes/: mod.rs
src/ws/: protocol.rs
