[package]
name = "axum-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tower-http = { version = "0.6", features = ["cors", "trace"] }

dotenvy = "0.15"

sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "mysql",
    "macros"
] }

tracing = "0.1"
tracing-subscriber = "0.3"
