[package]
name = "axum-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws"] }

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tower-http = { version = "0.6", features = ["cors", "trace"] }

dotenvy = "0.15"

sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "mysql",
    "macros",
    "migrate"
] }

tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
